--- a/Week06/Practical06_Control.ipynb
+++ b/Week06/Practical06_Control.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "Recall our 1D robot \n",
     "\n",
-    "<img src=\"Practical06_Support/images/1DRobot.png\" width=\"400\" height=\"400\" align=\"center\">\n",
+    "<img src=\"https://i.postimg.cc/064H42d7/1DRobot.png\" width=\"400\" height=\"400\" align=\"center\">\n",
     "\n",
     "We want to implement a controller that generates the signal $\\mathbf{u}_t$ required to bring the robot to a desired state $\\mathbf{x}_d$\n",
     "\n",
